# regulatory-rag-assistant

./: .env  .env.example  .gitignore  README.md  download_docs_pdf.py  download_docs_txt.py  ingestion-basic-1.py  ingestion-basic-2.py  ingestion-pipeline.py  ingestion.py  ingestion_pipeline_cached.py  llamaindex-hellowworld.py  main.py  pyproject.toml
crawled-docs/: TXPWCFINALDRAFT.md
