[project]
name = "regulatory-rag-assistant"
version = "0.1.0"
description = "RAG chatbot for Texas RRC waste management regulations"
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "crawl4ai>=0.8.0",
    "llama-index-core>=0.14.15",
    "llama-index-embeddings-mistralai>=0.4.1",
    "llama-index-llms-mistralai>=0.9.0",
    "llama-index-vector-stores-pinecone>=0.7.1",
    "mistralai>=1.9.11",
    "pinecone>=7.0.0,<8.0.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.54.0",
]
